style.css
/* ... */
.gallery-columns-2 .gallery-item {
	max-width: 50%;
}

.gallery-columns-3 .gallery-item {
	max-width: 33.33%;
}

.gallery-columns-4 .gallery-item {
	max-width: 25%;
}

.gallery-columns-5 .gallery-item {
	max-width: 20%;
}

.gallery-columns-6 .gallery-item {
	max-width: 16.66%;
}

.gallery-columns-7 .gallery-item {
	max-width: 14.28%;
}

.gallery-columns-8 .gallery-item {
	max-width: 12.5%;
}

.gallery-columns-9 .gallery-item {
	max-width: 11.11%;
}

.gallery-caption {
	display: block;
}
/*--------------------------------------------------------------
# rico-amber
--------------------------------------------------------------*/
@font-face {
    font-family: 'icomoon';
    src:    url('css/fonts/icomoon.eot?wu9i49');
    src:    url('css/fonts/icomoon.eot?wu9i49#iefix') format('embedded-opentype'),
        url('css/fonts/icomoon.ttf?wu9i49') format('truetype'),
        url('css/fonts/icomoon.woff?wu9i49') format('woff'),
        url('css/fonts/icomoon.svg?wu9i49#icomoon') format('svg');
    font-weight: normal;
    font-style: normal;
}

[class^="icon-"], [class*=" icon-"] {
    /* use !important to prevent issues with browser extensions that change fonts */
    font-family: 'icomoon' !important;
    speak: none;
    font-style: normal;
    font-weight: normal;
    font-variant: normal;
    text-transform: none;
    line-height: 1;

    /* Better Font Rendering =========== */
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
}


html{

	font-family: "Oxygen", sans-serif;
	-webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  box-sizing: border-box;

}

*, *:before, *:after{
	-webkit-box-sizing: inherit;
  	-moz-box-sizing: inherit;
  	box-sizing: inherit;
}

body{
	background-color: #fff;
	font-size: 62.5%;  /* font-size 1em = 10px on default browser settings */
	color: #fff;
	width: 100%;
}


/* PSD width was set to 1680px */
.site{
	/*width: 100%;*/
	/* max-width: 1680px; */
	height: 100%;
}

.noselect {
  -webkit-touch-callout: none; /* iOS Safari */
  -webkit-user-select: none;   /* Chrome/Safari/Opera */
  -khtml-user-select: none;    /* Konqueror */
  -moz-user-select: none;      /* Firefox */
  -ms-user-select: none;       /* Internet Explorer/Edge */
  user-select: none;           /* Non-prefixed version, currently
                                  not supported by any browser */
}
/* ---------------------------------------------------
			FONT-SIZES
--------------------------------------------------- */
a{
	text-decoration: none;
	color: #3b4954;
}

a:visited{
	color: #fff;
}

a:hover{
	color: #02baab;
}

ul{
	margin: 0;
	padding: 0;
}

li{
	display: inline-block;
	list-style-type: none;
}
h1{
	font-size: 6.0em;
	padding: 0;
	margin: 0;
}
h2{
	font-size: 3.6em;
	padding:0;
	margin:0;
	font-weight: lighter;
}

h3{
	font-size: 2.4em;
	font-weight: lighter;
}

h4{
	font-size: 2.2em;
	font-weight: lighter;
}

.torquoise-font{
	color: #02baab;
}

.gray-font{
	color: #3b4954;
}

p{
	margin: 0;
	padding: 0;
}

/* ---------------------------------------------------
			SEARCH BAR
--------------------------------------------------- */
.searchBar{
	width: 100%;
	background-color: #000;
	height: 48px;
}

/* ---------------------------------------------------
			NAV
--------------------------------------------------- */

nav{
	/* width: 100%; */
	/*height: 72px;*/
	text-align: center;
	position: relative;

	z-index: 3;
}

.nav-content{
	height: 72px;
	text-align: center;
	margin: 0 auto;
	background-color: rgba(0,0,0, 0.5);
	/* overflow: auto; */
	position: absolute;
	width: 100%;
}

.navbar-toggle{
	/*background-color: rgba(0,0,0,0);*/
	background-color: transparent;
	height: 100%;
	border: none;
	box-shadow: none;
	border-radius: 0px;
	padding: 0;
	text-shadow: none;
	display: none;
}

button:focus{
	box-shadow: none;
	border-color: initial;
}


.navbar-toggle-bar{
	width: 30px;
	height: 5px;
	background-color: white;
	display: block;
	margin: 5px 0;
	border-radius: 2px;
}


.logo{
	width: 200px;
	height: 72px;
	display:inline-block;
	/* vertical-align: top; */
	position: relative;
	/* margin: auto 0 ; */
}

.logo img{
	max-height: 100%;
	max-width: 100%;
	width: auto;
	height: auto;
	position: absolute;
	top:0;
	bottom: 0;
	left: 0;
	right: 0;
	margin: auto;
}
.drop-down-menu{
	/* display: none; */
}

nav ul{
	display: inline-block;
	/*width: auto;*/
	/*z-index: 1;*/
	margin-right: auto;
}

nav ul li{
	position: relative;
	margin: 0;
	/*width: 100px;*/
	width: 10vw;
	vertical-align: top;
	text-align: center;
	height: 72px;
	float: left;
}

.nav-color{
	height: 10px;
	width: 100%;
	left: 0;
	position: relative;
	top: 0;
	background-color: #fff;
	display: inline-block;
}

nav ul li a{
	position: absolute;
	top: 50%;
	left: 50%;
	transform: translateY(-50%);
	transform: translateX(-50%);
	display: inline-block;
	margin: auto;
	font-size: 1.3em;
	/*width: 100%;*/
}



@media screen and (max-width: 890px){
	.nav-content{
		text-align: center;;
	}

	.logo{
		/*display: block;*/
		width: 100px;
		margin: 0 5% 0 2%;
	}


	nav ul li a{
		margin: 0 auto;
		width: 80%;
	}

}
/* ... */

